--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                  <button type="button" class="btn btn-primary">Sauvegarder</button>
+                  <button id="save" type="button" class="btn btn-primary">Sauvegarder</button>
               </div>
           </div>
       </div>
