--- a/author.html
+++ b/author.html
@@ -9,16 +9,16 @@
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">jQuery quotes</a>
+    <a class="navbar-brand" href="index.html">jQuery quotes</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"> Homepage<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Author</a>
+        <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target=".js-modal-newquote">
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#myModal">
           New
         </a>
       </li>
@@ -33,7 +33,9 @@
             <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
           </figure>
         </div>
-        <div class="col-md-10">
+	<div class="col-md-2">
+	</div>
+        <div class="col-md-8">
           <h1 class="display-3">Albert Einstein</h1>
           <a href="#" class="btn btn-primary" id="js-request">Charger le texte</a>
           <p id="js-bio"></p>
@@ -42,6 +44,46 @@
     </div>
   </div>
 
+	<!-- Modal -->
+	<div id="myModal" class="modal fade" role="dialog">
+	  <div class="modal-dialog ">
+
+	    <!-- Modal content-->
+	    <div class="modal-content">
+	      <div class="modal-header">
+		<h4 class="modal-title">New Quote</h4>
+	      </div>
+	      <div class="modal-body">
+		<form class="form-horizontal">
+		  <div class="form-group">
+		    <label for="author" class="col-sm-2 control-label">Author</label>
+		    <div class="col-sm-10">
+		      <input type="text" class="form-control" id="inputAuthor" placeholder="Enter the author name">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label for="author" style="margin-top:5%;" class="col-sm-2 control-label">Quote</label>
+		    <div class="col-sm-10">
+		      <textarea style="margin-top:5%;" rows="4" cols="50" class="form-control" id="inputQuote">Enter the quote here</textarea>
+		    </div>
+		  </div>
+
+		</form>
+	      </div>
+	      <div class="modal-footer" >
+		<button type="button" style="margin-top:5%;" class="btn btn-default" data-dismiss="modal">Close</button>
+		<button type="button" style="margin-top:5%;" class="btn btn-info btn-lg">Save</button>
+	      </div>
+	    </div>
+
+	  </div>
+	</div>
+
   <!-- insert JavaScript here -->
+	<script src="javascripts/jquery-2.1.4.min.js"></script>
+	<script src="javascripts/tether.min.js"></script>
+	<script src="javascripts/bootstrap.js"></script>
+	<script src="javascripts/main.js"></script>
+
 </body>
 </html>
