--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>jQuery quotes</title>
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">jQuery quotes</a>
+    <a class="navbar-brand" href="index.html">jQuery quotes</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Homepage <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#myModal">
           New
         </a>
       </li>
@@ -35,10 +36,54 @@
     <div class="row">
       <div class="col-md-12">
         <div id="js-content"></div>
+		<blockquote> </blockquote>
       </div>
     </div>
   </div>
 
+
+	<!-- Modal -->
+	<div id="myModal" class="modal fade" role="dialog">
+	  <div class="modal-dialog ">
+
+	    <!-- Modal content-->
+	    <div class="modal-content">
+	      <div class="modal-header">
+		<h4 class="modal-title">New Quote</h4>
+	      </div>
+	      <div class="modal-body">
+		<form class="form-horizontal">
+		  <div class="form-group">
+		    <label for="author" class="col-sm-2 control-label">Author</label>
+		    <div class="col-sm-10">
+		      <input type="text" class="form-control" id="inputAuthor" placeholder="Enter the author name">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label for="author" style="margin-top:5%;" class="col-sm-2 control-label">Quote</label>
+		    <div class="col-sm-10">
+		      <textarea style="margin-top:5%;" rows="4" cols="50" class="form-control" id="inputQuote">Enter the quote here</textarea>
+		    </div>
+		  </div>
+
+		</form>
+	      </div>
+	      <div class="modal-footer" >
+		<button type="button" style="margin-top:5%;" class="btn btn-default" data-dismiss="modal">Close</button>
+		<button type="button" style="margin-top:5%;" class="btn btn-info btn-lg">Save</button>
+	      </div>
+	    </div>
+
+	  </div>
+	</div>
+
   <!-- insert JavaScript here -->
+	<script src="javascripts/jquery-2.1.4.min.js"></script>
+	<script src="javascripts/tether.min.js"></script>
+	<script src="javascripts/bootstrap.js"></script>
+	<script src="javascripts/main.js"></script>
+
+
+
 </body>
 </html>
