--- a/author.html
+++ b/author.html
@@ -9,16 +9,16 @@
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">jQuery quotes</a>
+    <a class="navbar-brand" href="index.html">jQuery quotes</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">All <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Author</a>
+        <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target=".js-modal-newquote">
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#js-modal-newquote">
           New
         </a>
       </li>
@@ -43,5 +43,10 @@
   </div>
 
   <!-- insert JavaScript here -->
+    <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/app.js"></script>
 </body>
 </html>
