--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">jQuery quotes</a>
+    <a class="navbar-brand" href="index.html">jQuery quotes</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">All <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="author.html">Author</a>
@@ -35,11 +35,6 @@
     <div class="row">
       <div class="col-md-12">
         <div id="js-content">
-
-        <blockquote>
-          
-        </blockquote>
-          
         </div>
       </div>
     </div>
