--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>jQuery quotes</title>
-  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-</head>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css"></head>
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
@@ -18,12 +17,42 @@
         <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" data-toggle="modal" data-target="#js-modal" data-whatever="Quote" href="#">
           New
         </a>
       </li>
     </ul>
   </nav>
+
+ <div class="modal fade" id="js-modal" tabindex="-1" role="dialog" aria-labelledby="js-modal-Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="js-modal-Label">New message</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="recipient-name" class="form-control-label">Quote:</label>
+              <textarea class="form-control" id="message-text"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="message-text" class="form-control-label">Author:</label>
+              <input type="text" class="form-control" id="recipient-name">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="jumbotron">
     <div class="container">
@@ -39,6 +68,14 @@
     </div>
   </div>
 
+
+
+
+
   <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/myjs.js"></script>
 </body>
 </html>
