--- a/author.html
+++ b/author.html
@@ -33,7 +33,7 @@
             <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
           </figure>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9 col-md-offset-1">
           <h1 class="display-3">Albert Einstein</h1>
           <a href="#" class="btn btn-primary" id="js-request">Charger le texte</a>
           <p id="js-bio"></p>
@@ -43,5 +43,12 @@
   </div>
 
   <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/myjquery.js"></script>
+
+
+
 </body>
 </html>
