--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
 </head>
 <body>
 
+<div class="bd-example">
+
+  <div class="modal fade" id="js-modal-bootstrap" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="js-modal-bootstrap">New message</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+              <div class="form-group">
+              <label for="message-text" class="form-control-label">Citation:</label>
+              <textarea class="form-control" id="message-text"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="recipient-name" class="form-control-label">Author:</label>
+              <input type="text" class="form-control" id="recipient-name">
+            </div>
+
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
     <a class="navbar-brand" href="#">jQuery quotes</a>
     <ul class="nav navbar-nav">
@@ -18,7 +51,7 @@
         <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#js-modal-bootstrap" data-whatever="">
           New
         </a>
       </li>
@@ -39,6 +72,13 @@
     </div>
   </div>
 
+  
+
   <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/myjquery.js"></script>
+
 </body>
 </html>
