--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </div>
   </div>
 
+  <div id="content"></div>
+
   <div id="MyModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
           <div class="modal-content">
