--- a/author.html
+++ b/author.html
@@ -42,6 +42,10 @@
     </div>
   </div>
 
-  <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/script.js"></script>
+
 </body>
 </html>
