--- a/author.html
+++ b/author.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>jQuery quotes</title>
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-</head>
 <body>
 
   <nav class="navbar navbar-static-top navbar-dark bg-inverse">
@@ -29,7 +28,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2">
-          <figure class="figure">
+          <figure class="">
             <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
           </figure>
         </div>
@@ -43,5 +42,9 @@
   </div>
 
   <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/quotes.js"></script>
 </body>
 </html>
