--- a/index.html
+++ b/index.html
@@ -18,9 +18,36 @@
         <a class="nav-link" href="author.html">Author</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+       <!-- <a class="nav-link" href="#">
           New
-        </a>
+        </a>-->
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ModalNewQuote">New</button>
+
+<!-- Modal -->
+<div id="ModalNewQuote" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h1 class="modal-title">Nouvelle citation</h1>
+      </div>
+      <div class="modal-body">
+        <h4>Citation</h4>
+        <textarea class="form-control" rows="3" id="Citation"> </textarea>
+        <h4>Auteur</h4>
+        <textarea class="form-control" rows="3" id="Auteur" placeholder="JFK"> </textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" id="Fermer" data-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-primary" id ="Sauvegarder">Sauvegarder</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
       </li>
     </ul>
   </nav>
@@ -40,5 +67,9 @@
   </div>
 
   <!-- insert JavaScript here -->
+  <script src="javascripts/jquery-2.1.4.min.js"></script>
+  <script src="javascripts/tether.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
+  <script src="javascripts/quotes.js"></script>
 </body>
 </html>
