--- a/author.html
+++ b/author.html
@@ -4,44 +4,48 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>jQuery quotes</title>
-  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
-<body>
+  <body>
 
-  <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">jQuery quotes</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Author</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target=".js-modal-newquote">
-          New
-        </a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">jQuery quotes</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">All <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="author.html">Author</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">New</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-  <div class="jumbotron">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
-          <figure class="figure">
-            <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
-          </figure>
-        </div>
-        <div class="col-md-10">
-          <h1 class="display-3">Albert Einstein</h1>
-          <a href="#" class="btn btn-primary" id="js-request">Charger le texte</a>
-          <p id="js-bio"></p>
+    <div class="jumbotron">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <figure class="figure">
+              <img class="figure-img img-fluid img-rounded" src="images/einstein.jpg" alt="">
+            </figure>
+          </div>
+          <div class="col-md-10">
+            <h1 class="display-3">Albert Einstein</h1>
+            <a href="#" class="btn btn-primary" id="js-request">Charger le texte</a>
+            <p id="js-bio"></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- insert JavaScript here -->
-</body>
+    <!-- insert JavaScript here -->
+  </body>
 </html>
