--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
     </div>
 
     <!-- insert JavaScript here -->
+    <!-- add a new file like  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script> -->
   </body>
 </html>
